fix: disable Ray object spilling to prevent disk exhaustion
SkyPilot uses Ray autoscaler internally to manage cloud clusters.
When handling 20 concurrent cluster operations, Ray's object spilling
fills up the GitHub Actions runner's disk (48GB) with spilled objects
in /tmp/ray_skypilot/.

Setting RAY_automatic_object_spilling_enabled=false prevents this
disk exhaustion while still allowing concurrent cluster management.

--- a/.github/workflows/weekly-eval.yml
+++ b/.github/workflows/weekly-eval.yml
@@ -17,6 +17,10 @@ on:
 
 env:
   SKYPILOT_CLOUD: gcp
+  # Disable Ray object spilling to prevent disk exhaustion on GitHub Actions runner
+  # SkyPilot uses Ray autoscaler internally, which can spill objects to disk
+  # when handling many concurrent cluster operations
+  RAY_automatic_object_spilling_enabled: "false"
 
 jobs:
   evaluate:
