--- a/algorithmic/docker-compose.yml
+++ b/algorithmic/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       GJ_PARALLELISM: "8"         # go-judge concurrency
       SAVE_OUTPUTS: "false"       # Save contestant outputs to submissions/sid/case_*.out
     volumes:
-      - ./problems:/app/problems
+      - ${PROBLEMS_DIR:-./problems}:/app/problems
       - ./submissions:/app/submissions
       - ./data:/app/data          # For results/cache
     ports:
