--- a/research/problems/qknorm/resources/pyproject.toml
+++ b/research/problems/qknorm/resources/pyproject.toml
@@ -5,6 +5,7 @@ description = "QKNorm optimization problem resources"
 requires-python = ">=3.10"
 dependencies = [
     "flashinfer-python",
+    "flashinfer-cubin",
 ]
 # Docker image already has torch, triton, numpy, tqdm
 
